--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry exported="true" kind="var" path="USERLIBS_DIR/navx_frc.jar"/>
 	<classpathentry kind="lib" path="/Users/talebhirani/wpilib/user/java/lib/navx_frc.jar"/>
 	<classpathentry kind="lib" path="/Users/simon/wpilib/user/java/lib/CTRLib.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/CTRLib.jar"/>
+	<classpathentry kind="var" path="USERLIBS_DIR/jzmq-2.1.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
